[tool.poetry]
name = "board_game"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
structlog = "==20.2.0"
gunicorn = "^20.0.4"
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"
twisted = "==20.3.0"
SQLAlchemy = {extras = ["postgresql_psycopg2binary"], version = "^1.3.20"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
pytest = "==6.0.1"
pytest-factoryboy = "^2.0.3"
factory-boy = "==3.0.1"
faker= "==2.0.2"
freezegun = "1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
